Append the version number to the cmake_path and ndk_path paths in the configuration file.

--- a/nmm-protect/apkprotect/src/main/resources/config-windows.json
+++ b/nmm-protect/apkprotect/src/main/resources/config-windows.json
@@ -12,12 +12,10 @@
         "sdk_path": "G:/Android/Sdk",
 
         // Full path: G:/Android/Sdk/cmake/3.18.1
-        "cmake_path": "G:/Android/Sdk/cmake",
-        "cmake_version": "3.18.1",
+        "cmake_path": "G:/Android/Sdk/cmake/3.18.1",
 
         // Full path: G:/Android/Sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/windows-x86_64/bin/llvm-strip
-        "ndk_path": "G:/Android/Sdk/ndk",
-        "ndk_version": "23.1.7779620",
+        "ndk_path": "G:/Android/Sdk/ndk/23.1.7779620",
         "ndk_toolchains": "/toolchains/llvm/prebuilt/",
         "ndk_abi": "windows-x86_64",
         "ndk_strip": "/bin/llvm-strip"
