--- a/nmm-protect/apkprotect/src/main/resources/config.json
+++ b/nmm-protect/apkprotect/src/main/resources/config.json
@@ -10,14 +10,12 @@
   "environment": {
     // Full path: /opt/android-sdk
     "sdk_path": "/opt/android-sdk",
-
     // Full path: /opt/android-sdkcmake/3.18.1
-    "cmake_path": "/opt/android-sdk/cmake/",
-    "cmake_version": "3.18.1",
+    "cmake_path": "/opt/android-sdk/cmake/3.18.1",
 
     // Full path: /opt/android-sdk/ndk/23.1.7779620/toolchains/llvm/prebuilt/linux-x86_64/bin/llvm-strip
-    "ndk_path": "/opt/android-sdk/ndk/",
-    "ndk_version": "23.1.7779620",
+
+    "ndk_path": "/opt/android-sdk/ndk/23.1.7779620",
     "ndk_toolchains": "/toolchains/llvm/prebuilt/",
     "ndk_abi": "linux-x86_64",
     "ndk_strip": "/bin/llvm-strip"
